--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,19 +1,17 @@
 ﻿@page "/fetchdata"
 @inject HttpClient Http
-<HelloName Name="Florian" />
-<h1>Weather forecast</h1>
 
+<h1>Weather forecast</h1>
 <p>This component demonstrates fetching data from the server.</p>
 
 @if (forecasts == null)
 {
     <Progressbar />
-
 }
 else
 {
+    <strong>Total temperature this week is: <span>@(forecasts.Sum(x=> x.TemperatureC))</span> degrees</strong>
 
-    <p>Total temperature this week is: @(forecasts.Sum(x=> x.TemperatureC)) degrees</p>
     <table class="table">
         <thead>
             <tr>
